--- a/style.css
+++ b/style.css
@@ -12,4 +12,45 @@ body {
     font-family: "proxima-nova", sans-serif;
     font-size: 16px;
     height: 100vh;
+
+    
+}
+
+.two-col {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    /* grid-template-rows: 80px 1fr; */
+}
+
+.one-col {
+    display: grid;
+    grid-template-columns: 1fr;
+    /* grid-template-rows: 80px 1fr; */
+}
+
+header,
+.image,
+main {
+    background-color:steelblue;
+    color: white;
+    /* padding: 20px; */
+    border:skyblue 1px solid;
+    padding: 100px 
+}
+
+/* header {
+    background: red;
+    grid-column: 1/3
+} */
+
+.copy {
+    background-color: aqua;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.btns {
+    display: flex;
+    flex-direction: column;
 }
