--- a/style.css
+++ b/style.css
@@ -22,6 +22,15 @@ h1 {
     line-height: 80px;
 }
 
+
+
+.form-input {
+    width: 40vw;
+    font-family: proxima-nova, sans-serif;
+    font-size:24px;
+    color: #006341;
+}
+
 .description {
     font-size: 18px;
 }
@@ -73,9 +82,11 @@ main {
     display: grid;
     grid-template-rows: repeat(2,1fr);
     gap: 20px;
+    width: 400px;
+    align-self: flex-end;
 }
 
-.btns a {
+.btns a, button {
     background-color: #006341;
     font-family: proxima-nova,sans-serif;
     color: #fff;
@@ -83,7 +94,7 @@ main {
     font-weight: 600;
     text-decoration: none;
     text-align: center;
-    width: 50%;
+    width: 100%;
     padding: 20px;
     border: none; 
     border-radius: 50px;
