--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-image: url(../images/WebBackgroundImage-01.png);
+    background-image: url(./images/WebBackgroundImage-01.png);
     background-size: cover;
     font-family: proxima-nova, sans-serif;
     font-size: 24px;
