--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ main {
         /* color: white; */
         /* padding: 20px; */
         /* border:skyblue 1px solid; */
-        padding: 100px 
+        padding: 0 100px 
     }
 
     .image {
